--- a/src/fonts.scss
+++ b/src/fonts.scss
@@ -7,3 +7,8 @@ $body_font: 'Neucha';
 body {
     font-family: $body_font, sans-serif;
 }
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: $header_font, sans-serif;
+    font-weight: normal;
+}
