--- a/src/form.scss
+++ b/src/form.scss
@@ -1,4 +1,4 @@
-input.form-control, select.form-control {
+input.form-control, select.form-control, textarea.form-control {
   border: 2px solid #41403e;
   border-top-left-radius: 255px 45px;
   border-top-right-radius: 45px 224px;
